[ISSUE #1700] Refactor shenyu-bootstrap release package structure (#1735)
* refactor shenyu-bootstrap release package structure

* refactor shenyu-bootstrap release package structure